# mono

./: .bazelrc  .bazelrc.ci  .travis.yml  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.old  package.json  travis-ci-build.sh  tsconfig.json  tsconfig.json.old
projects/advent-of-code/2017/1/: BUILD.bazel  main.js
projects/advent-of-code/2017/2/: BUILD.bazel  main.js  more_input_2.txt
projects/advent-of-code/2018/1/: main.js
projects/advent-of-code/2018/10/: main.js
projects/advent-of-code/2018/2/: main.js
projects/advent-of-code/2018/3/: main.js
projects/advent-of-code/2018/4/: main.js  package-lock.json  package.json  second_input.txt
projects/advent-of-code/2018/5/: main.js
projects/advent-of-code/2018/6/: main.js
projects/advent-of-code/2020/1/: BUILD.bazel  main.js
projects/angular-example/: BUILD
projects/angular-example/e2e/: BUILD
projects/angular-example/src/: BUILD  BUILD.bazel  app.module.dev.ts  app.module.ts  tsconfig.json
projects/angular-example/src/hello-world/: BUILD.bazel  hello-world.component.scss  hello-world.module.ts
projects/angular-example/src/todos/: BUILD.bazel  todos.component.scss
projects/blog/: README.md  package.json
projects/blog/src/: App.tsx  ImageCard.tsx  MeCard.tsx  Sidebar.tsx  Topbar.tsx
projects/catchphrase/: clean_data.sh  data.csv  package-lock.json  package.json  request.js
projects/flatbuffers/: README.md  main.go  payload.fbs
projects/flatbuffers/LMS/: AnyPayload.go  List.go  NumberValue.go  Phone.go  Record.go  RecordField.go  StringValue.go
projects/grpc-web/: .bazelrc  BUILD.bazel  README.md  start.sh
projects/grpc-web/backend/: BUILD.bazel  server.go
projects/grpc-web/frontend/: .gitignore  BUILD.bazel  README.md  copy_bazel_files.sh  package.json  tsconfig.json  webpack.config.js
projects/grpc-web/frontend/_proto/: book_service_pb.d.ts
projects/grpc-web/frontend/src/: index.ts
projects/grpc-web/frontend/src/public/: index.ts
projects/grpc-web/frontend/ts/: index.html  webpack.config.js
projects/grpc-web/frontend/ts/_proto/: book_service_pb_service.d.ts  book_service_pb_service.js
projects/grpc-web/frontend/ts/src/: index.js  index.js.map  index.ts
projects/grpc-web/proto/: BUILD.bazel  book_service.proto
projects/grpc-web/proxy/: BUILD.bazel  Dockerfile-Envoy  envoy.yaml  start.sh
projects/media-storage/: README.md
projects/minecraft/: README.md  main.tf
projects/personal-assistant/: NOTES.md
projects/scraper/: BUILD.bazel  README.md  data.csv  main.go  save-to-csv.go  thegamegal.go  types.go  utils.go
projects/spotify-visualizer/: BUILD.bazel  StreamingHistory.json  main.ts
projects/xml-to-sheets/: .gitignore  BUILD.bazel  README.md  input.xml  main.js  output.csv  package.json
tools/: bazel_0.15.0-linux-x86_64.deb.sha256  bazel_3.7.1-linux-x86_64.deb.sha256
