package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/coltonmorris/mono",
)


genrule(
    name = "placeholder",
    srcs = [],
    outs = ["placeholder.txt"],
    cmd = "echo 'hi' > \"$@\"",
)

exports_files(
  [
    "tsconfig.json",
    "package.json",
    "yarn.lock",
    ],
)
