package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

filegroup(
    name = "build",
    srcs = [
        "//projects/grpc-web/backend",
        "//projects/grpc-web/proxy:start_envoy",
    ],
)

sh_binary(
    name = "start",
    srcs = ["start.sh"],
)
