load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "save-to-csv.go",
        "thegamegal.go",
        "types.go",
        "utils.go",
    ],
    importpath = "github.com/coltonmorris/mono/projects/scraper",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_gocolly_colly//:go_default_library"
    ],
)

go_binary(
    name = "scraper",
    data = ["data.csv"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
