package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")


ts_library(
  name = "src",
  node_modules = "@npm//:node_modules",
  tsconfig = "//:tsconfig.json",
  srcs = glob([
    "**/*.ts*",
  ]),
  deps = [
    # "//bazel/protoc-gen-state/example/fullApp/proto:basic",
    # "//bazel/protoc-gen-state/example/fullApp/proto/basic:ts_protos",
  ],
)

nodejs_binary(
  name = "run",
  data = [
    ":src",
    "StreamingHistory.json",
    "@npm//d3",
  ],
  entry_point = "mono/projects/spotify-visualizer/main"
)
