package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_devserver", "ts_library", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ts_library(
    name = "src",
    srcs = [
        "main.ts",
        "typings.d.ts",
    ],
    data = [
        "StreamingHistory.json",
    ],
    node_modules = "@npm//:node_modules",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/d3",
        "@npm//d3",
    ],
)

nodejs_binary(
    name = "spotify-visualizer",
    data = [
        ":src",
    ],
    entry_point = "main",
)
