package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")


nodejs_binary(
  name = "xml-to-sheets",
  # node_modules = "@npm//:node_modules",
  data = [
    "main.js",
    "input.xml",
    "output.csv",
    "@npm//xmldoc",
    "@npm//google-spreadsheet",
    "@npm//async",
    "@npm//bluebird",
    "@npm//fs",
  ],
  entry_point = "mono/projects/xml-to-sheets/main.js"
)
