package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "xml-to-sheets",
    node_modules = "@npm//:node_modules",
    data = [
        "input.xml",
        "main.js",
        "output.csv",
    ],
    entry_point = "main.js",
)
