load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["server.go"],
    importpath = "github.com/coltonmorris/mono/projects/grpc-web/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//projects/grpc-web/proto:proto",

        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "backend",
    embed = [":lib"],
    visibility = ["//visibility:public"],
    importpath = "github.com/coltonmorris/mono/projects/grpc-web/backend",
)

go_library(
    name = "lib",
    srcs = ["server.go"],
    importpath = "github.com/coltonmorris/mono/projects/grpc-web/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//projects/grpc-web/proto:proto",

        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
