package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_devserver", "ts_library", "ts_project")

exports_files(
    [
        "tsconfig.json",
        "package.json",
        "yarn.lock",
    ],
)

ts_library(
    name = "build",
    srcs = glob([
        "src/**/*.ts*",
    ]),
    node_modules = "@npm//:node_modules",
    tsconfig = ":tsconfig.json",
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//grpc-web-client",
    ],
)
